--- a/Weather APP/style.css
+++ b/Weather APP/style.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Open Sans', sans-serif;
     background: #222;
     background-image: url('https://source.unsplash.com/1600x900/?landscape');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     font-size: 120%;
   }
   
